Refine entity/service for Sonar rules