@@ -21,7 +21,6 @@ import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -98,7 +97,7 @@ public class UserService {
                 .filter(role -> role != null && !role.isBlank())
                 .map(String::trim)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
         entity.setRoles(normalized);
         return mapper.toUser(repository.save(entity));
     }
